<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/tool_change_unit"
        android:orderInCategory="2"
        android:title="@string/change_co2_unit"
        android:icon="@drawable/garbagebag"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tool_date"
        android:orderInCategory="1"
        android:title="@string/change_date"
        android:icon="@drawable/calendar"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/tool_about"
        android:orderInCategory="3"
        android:title="@string/about"
        android:icon="@drawable/gearwheel"
        app:showAsAction="ifRoom" />




</menu>