<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olive.carbon_tracker.MainMenu">

    <TextView
        android:id="@+id/txtMainMenu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/main_menu"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnCreateJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtMainMenu"
        android:text="@string/new_journey"
        tools:layout_editor_absoluteY="70dp"
        tools:layout_editor_absoluteX="27dp" />

    <Button
        android:id="@+id/btnSelectJourney"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnCreateJourney"
        android:text="@string/select_journey"
        tools:layout_editor_absoluteY="191dp"
        tools:layout_editor_absoluteX="27dp" />

    <Button
        android:id="@+id/btnCurrentFootprint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/btnSelectJourney"
        android:text="@string/carbon_footprint"
        tools:layout_editor_absoluteY="362dp"
        tools:layout_editor_absoluteX="27dp" />
</RelativeLayout>
