<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olive.carbon_tracker.UI.AboutActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:background="#2E2D2D"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

    <TextView
        android:id="@+id/txtAboutTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_the_authors"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="16dp"
        android:layout_below="@+id/toolbar_about"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp" />

    <TextView
        android:id="@+id/txtGroupNameAndDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/group_name_and_date"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="68dp"
        android:layout_marginTop="26dp"
        android:layout_below="@+id/txtAboutTitle"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtSFULink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sfu_cs_hyperlink"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="85dp"
        android:layout_below="@+id/txtGroupNameAndDate"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtImageCitations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/image_citations"
        android:layout_below="@+id/txtVersion"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/txtVersion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/txtSFULink"
        android:text="@string/app_version" />

</RelativeLayout>
