<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <TextView
        android:id="@+id/CarYearWImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CarModelWithimage"
        android:layout_toEndOf="@+id/RouteImage"
        android:text="@string/tempTotalDst"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/CarNameWithimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/RouteImage"
        android:layout_toEndOf="@+id/RouteImage"
        android:text="@string/tempRouteName"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/CarMakeWithimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CarNameWithimage"
        android:layout_toEndOf="@+id/RouteImage"
        android:text="@string/tempCityDst"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/RouteImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/old_vintage_car"
        android:contentDescription=""
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/CarModelWithimage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/CarMakeWithimage"
        android:layout_toEndOf="@+id/RouteImage"
        android:text="@string/tempHwatDst"
        android:textAlignment="viewEnd"
        android:textSize="12sp" />

</RelativeLayout>