<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olive.carbon_tracker.UI.GraphPicker">

    <Button
        android:id="@+id/btnSingleDay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/single_day"
        tools:layout_editor_absoluteX="133dp"
        tools:layout_editor_absoluteY="87dp"
        android:layout_marginBottom="54dp"
        android:layout_above="@+id/btnMonthGraph"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/btnMonthGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        android:layout_centerVertical="true"
        android:layout_alignStart="@+id/btnYearGraph" />

    <Button
        android:id="@+id/btnYearGraph"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="53dp"
        android:text="@string/year"
        android:layout_below="@+id/btnMonthGraph"
        android:layout_centerHorizontal="true" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_graph_picker"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#111111"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme" />

</RelativeLayout>
