<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olive.carbon_tracker.UI.SingleDayGraph"
    android:background="@drawable/sky">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_single_day"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"/>

        <TextView
            android:id="@+id/txtCurrentDate_SingleDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="14dp"
            android:layout_marginTop="62dp"
            android:text="@string/dd_mm_yyyy"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="89dp" />



            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/journey_carbon_emissions"
                android:textAlignment="center" />

            <com.github.mikephil.charting.charts.PieChart

                android:id="@+id/chart"
                android:layout_width="320dp"
                android:layout_height="360dp"
                android:layout_marginLeft="20dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/transportation_mode_carbon_emissions"
                android:textAlignment="center" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/mode_PieChart"
                android:layout_width="320dp"
                android:layout_height="360dp"
                android:layout_marginLeft="20dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp"
                tools:ignore="RtlHardcoded" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/route_carbon_emissions"
                android:textAlignment="center" />

            <com.github.mikephil.charting.charts.PieChart
                android:id="@+id/route_PieChart"
                android:layout_width="320dp"
                android:layout_height="360dp"
                android:layout_marginLeft="20dp"
                tools:layout_editor_absoluteX="8dp"
                tools:layout_editor_absoluteY="8dp"
                tools:ignore="RtlHardcoded" />
        </LinearLayout>

    </RelativeLayout>

</ScrollView>
