<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.olive.carbon_tracker.UI.AddCar"
    android:background="@drawable/roadbackground">

    <TextView
        android:id="@+id/ID_add_car"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="11dp"
        android:text="@string/edit_a_car"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="148dp"
        tools:layout_editor_absoluteY="16dp" />

    <EditText
        android:id="@+id/ID_Car_Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ID_add_car"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:ems="10"
        android:hint="@string/nickname_for_your_car"
        android:maxLines="1"
        android:textAlignment="center"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/ID_drop_down_make"
        android:layout_width="299dp"
        android:layout_height="46dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="173dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="45dp"
        android:layout_below="@+id/ID_Car_Name"
        android:layout_alignStart="@+id/ID_Car_Name"
        tools:ignore="RtlHardcoded" />
    <!--android:layout_alignStart="@+id/ID_Car_Name"-->

    <Spinner
        android:id="@+id/ID_drop_down_model"
        android:layout_width="299dp"
        android:layout_height="46dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="173dp"
        android:layout_below="@+id/ID_drop_down_make"
        android:layout_marginTop="27dp"
        android:layout_alignEnd="@+id/ID_drop_down_make"
        android:layout_toEndOf="@+id/ID_textview_model" />

    <Spinner
        android:id="@+id/ID_drop_down_year"
        android:layout_width="299dp"
        android:layout_height="46dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="173dp"
        android:layout_below="@+id/ID_drop_down_model"
        android:layout_marginTop="31dp"
        android:layout_alignEnd="@+id/ID_drop_down_make"
        android:layout_toEndOf="@+id/ID_textview_model" />

    <Spinner
        android:id="@+id/ID_drop_down_dspl"
        android:layout_width="299dp"
        android:layout_height="46dp"
        android:layout_marginTop="29dp"
        tools:layout_editor_absoluteX="43dp"
        tools:layout_editor_absoluteY="173dp"
        android:layout_below="@+id/ID_drop_down_year"
        android:layout_alignEnd="@+id/ID_drop_down_year"
        android:layout_toEndOf="@+id/ID_textview_dspl" />

    <TextView
        android:id="@+id/ID_textview_make"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ID_drop_down_make"
        android:layout_marginTop="14dp"
        android:layout_toStartOf="@+id/ID_Car_Name"
        android:text="@string/make"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ID_textview_model"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ID_textview_make"
        android:layout_below="@+id/ID_drop_down_make"
        android:layout_marginTop="39dp"
        android:text="@string/model"
        android:textColor="@android:color/black"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/ID_textview_year"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_below="@+id/ID_drop_down_model"
        android:layout_marginTop="46dp"
        android:layout_toStartOf="@+id/ID_drop_down_year"
        android:text="@string/year"
        android:textColor="@android:color/black"
        android:textStyle="bold" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ID_button_OKAdd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_green_dark"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/checkbox_on_background"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/ID_Car_Name" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/ID_button_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:backgroundTint="@android:color/holo_red_light"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/btn_dialog"
        android:layout_alignTop="@+id/ID_button_OKAdd"
        android:layout_alignStart="@+id/ID_Car_Name" />

    <TextView
        android:id="@+id/ID_textview_dspl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/ID_drop_down_dspl"
        android:layout_toStartOf="@+id/ID_drop_down_year"
        android:text="@string/displacement_and_transmission"
        android:textAlignment="textEnd"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold" />

    <Spinner
        android:id="@+id/imageSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/ID_button_OKAdd"
        android:layout_alignStart="@+id/ID_drop_down_dspl"
        android:layout_marginTop="0dp"
        android:layout_marginBottom="30dp"

        android:layout_below="@+id/ID_drop_down_dspl"
        android:layout_above="@+id/ID_button_OKAdd" />

</RelativeLayout>
